--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
 	<meta name="description" content="シマブクロユウキ Portfolio Site">
 	<meta name="keywords" content="シマブクロユウキ,島袋裕樹,デザイン,ポートフォリオ">
 	<meta name="author" content="Shimabukuro Yuki">
+  <link rel="shortcut icon" href="image/favicon.ico">
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
+
+
 <div class="wrapper">
+<div class="top"></div>
+
   <div class="navbar">
     <nav>
       <div class="navbar-logo">
@@ -25,6 +30,7 @@
       </ul>
     </nav>
   </div>
+
 
   <div class="container">
     <div class="grid">
@@ -77,5 +83,10 @@
     </div>
   </div>
 </div>
+
+
+
+
+
 </body>
 </html>
