--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 
 
 <div class="wrapper">
-<div id="top" class="top animated">
-  <img class="logo animated" src="image/top.png">
-</div>
-
+  <div class="top-slide-container">
+    <div class="top-slide-inner">
+      <img class="top-slide-logo" src="image/top.png">
+    </div>
+  </div>
 
   <div class="navbar">
     <nav>
