--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <img id="img" src="image/logo-blackandwhite.jpg" alt="残念...画像がないよ">
       </div>
       <ul class="navbar-menu">
-        <li><a>制作物\Works</a></li>
+        <li><a href="#works">制作物\Works</a></li>
         <li><a>シマブクロユウキとは\About</a></li>
         <li><a>連絡先\Contact</a></li>
       </ul>
@@ -37,7 +37,7 @@
   </div>
 
 
-  <div class="container">
+  <div class="container"><a id="works"></a>
     <div class="grid">
       <div class="grid-item"></div>
       <div class="grid-item grid-item--width2 grid-item--height2"></div>
