--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
 	<meta name="keywords" content="シマブクロユウキ,島袋裕樹,デザイン,ポートフォリオ">
 	<meta name="author" content="Shimabukuro Yuki">
   <link rel="shortcut icon" href="image/favicon.ico">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
   <link rel="stylesheet" type="text/css" href="css/animate.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/lightbox.css">
+
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+  <script src="js/lightbox.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
@@ -30,8 +33,8 @@
       </div>
       <ul class="navbar-menu">
         <li><a href="#works">制作物\Works</a></li>
-        <li><a>シマブクロユウキとは\About</a></li>
-        <li><a>連絡先\Contact</a></li>
+        <li><a href="about.html">シマブクロユウキとは\About</a></li>
+        <li><a href="contact.html">連絡先\Contact</a></li>
       </ul>
     </nav>
   </div>
@@ -39,43 +42,48 @@
 
   <div class="container"><a id="works"></a>
     <div class="grid">
-      <div class="grid-item"></div>
-      <div class="grid-item grid-item--width2 grid-item--height2"></div>
-      <div class="grid-item grid-item--height3"></div>
-      <div class="grid-item grid-item--height2"></div>
-      <div class="grid-item grid-item--width3"></div>
-      <div class="grid-item"></div>
-      <div class="grid-item"></div>
-      <div class="grid-item grid-item--height2"></div>
-      <div class="grid-item grid-item--width2 grid-item--height3"></div>
-      <div class="grid-item"></div>
-      <div class="grid-item grid-item--height2"></div>
-      <div class="grid-item"></div>
-      <div class="grid-item grid-item--width2 grid-item--height2"></div>
-      <div class="grid-item grid-item--width2"></div>
-      <div class="grid-item"></div>
-      <div class="grid-item grid-item--height2"></div>
-      <div class="grid-item"></div>
-      <div class="grid-item"></div>
+      <div class="grid-item"><a href="image/kaisei.png" data-lightbox="group1" data-title="休日と快晴と君と">
+      <img src="image/kaisei.png">
+      </div>
+
+      <div class="grid-item grid-item--width2 grid-item--height2"><a href="image/soundshape.png" data-lightbox="group1" data-title="sound shape">
+      <img src="image/soundshape.png"></div>
+
       <div class="grid-item grid-item--height3"></div>
       <div class="grid-item grid-item--height2"></div>
       <div class="grid-item"></div>
       <div class="grid-item"></div>
+      <div class="grid-item"></div>
+      <div class="grid-item grid-item--height2"></div>
+      <div class="grid-item grid-item--height3"></div>
+      <div class="grid-item"></div>
       <div class="grid-item grid-item--height2"></div>
       <div class="grid-item"></div>
-      <div class="grid-item grid-item--width2 grid-item--height2"></div>
+      <div class="grid-item grid-item--height2"></div>
+      <div class="grid-item"></div>
+      <div class="grid-item"></div>
+      <div class="grid-item grid-item--height2"></div>
+      <div class="grid-item"></div>
+      <div class="grid-item"></div>
       <div class="grid-item grid-item--height3"></div>
       <div class="grid-item grid-item--height2"></div>
-      <div class="grid-item grid-item--width3"></div>
       <div class="grid-item"></div>
       <div class="grid-item"></div>
       <div class="grid-item grid-item--height2"></div>
-      <div class="grid-item grid-item--width2 grid-item--height3"></div>
+      <div class="grid-item"></div>
+      <div class="grid-item grid-item--height2"></div>
+      <div class="grid-item grid-item--height3"></div>
+      <div class="grid-item grid-item--height2"></div>
+      <div class="grid-item"></div>
+      <div class="grid-item"></div>
+      <div class="grid-item"></div>
+      <div class="grid-item grid-item--height2"></div>
+      <div class="grid-item grid-item--height3"></div>
       <div class="grid-item"></div>
       <div class="grid-item grid-item--height2"></div>
       <div class="grid-item"></div>
-      <div class="grid-item grid-item--width2 grid-item--height2"></div>
-      <div class="grid-item grid-item--width2"></div>
+      <div class="grid-item grid-item--height2"></div>
+      <div class="grid-item"></div>
       <div class="grid-item"></div>
       <div class="grid-item grid-item--height2"></div>
       <div class="grid-item"></div>
