--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 	<title>dE dE design</title>
 	<meta name="description" content="シマブクロユウキ Portfolio Site">
 	<meta name="keywords" content="シマブクロユウキ,島袋裕樹,デザイン,ポートフォリオ">
