--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+  <script src="js/jquery.imagesloaded.min.js"></script>
   <script src="js/lightbox.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
 </head>
@@ -198,6 +199,17 @@
           <img src="images/yokohama.png">
         </a>
       </div>
+
+      <div class="grid-item">
+        <a href="images/yasasii.png" data-lightbox="group27" data-title="優しい君へ">
+          <img src="images/yasasii.png">
+        </a>
+        <a href="images/yasasii-2.png" data-lightbox="group27" data-title="優しい君へ">
+          <img src="images/yasasii-2.png">
+        </a>
+      </div>
+
+
 
       
 
