--- a/contact.html
+++ b/contact.html
@@ -20,14 +20,14 @@
 <div class="wrapper">
   <div class="top-slide-container">
     <div class="top-slide-inner">
-      <img class="top-slide-logo" src="image/top.png">
+      <img class="top-slide-logo" src="images/top.png">
     </div>
   </div>
 
   <div class="navbar">
     <nav>
       <div class="navbar-logo">
-        <img id="img" src="image/logo-blackandwhite.jpg" alt="残念...画像がないよ">
+        <img id="img" src="images/logo-blackandwhite.jpg" alt="残念...画像がないよ">
       </div>
       <ul class="navbar-menu">
         <li><a href="index.html">制作物\Works</a></li>
