--- a/index.html
+++ b/index.html
@@ -28,20 +28,19 @@
     </div>
   </div>
 
-  <div class="navbar">
-    <nav>
-      <div class="navbar-logo">
-        <img id="img" src="images/logo-blackandwhite.jpg" alt="残念...画像がないよ">
-      </div>
-      <ul class="navbar-menu">
-        <li><a href="#works">制作物\Works</a></li>
-        <li><a href="about.html">シマブクロユウキとは\About</a></li>
-        <li><a href="contact.html">連絡先\Contact</a></li>
-      </ul>
-    </nav>
+  <div class="top-logo">
+    <img src="images/top-logo.png">
   </div>
 
+  <div class="address">
+    <p>MAIL = shima.d.design[at mark]gmail.com</p>
+  </div>
 
+  <div class="sns">
+    <p>Twitter = [at mark]s_d_design</p>
+  </div>
+
+  
   <div class="container"><a id="works"></a>
     <div class="grid">
       <div class="grid-item">
