--- a/index.html
+++ b/index.html
@@ -32,16 +32,17 @@
     <img src="images/top-logo.png">
   </div>
 
-  <div class="address">
-    <p>MAIL = shima.d.design[at mark]gmail.com</p>
-  </div>
 
-  <div class="sns">
-    <p>Twitter = [at mark]s_d_design</p>
-  </div>
+    <div class="address">
+      <p>MAIL = shima.d.design[at mark]gmail.com</p>
+    </div>
+
+    <div class="sns">
+      <p>Twitter = [at mark]s_d_design</p>
+    </div>
 
   
-  <div class="container"><a id="works"></a>
+  <div class="container">
     <div class="grid">
       <div class="grid-item">
         <a href="images/kaisei.png" data-lightbox="group1" data-title="休日と快晴と君と">
@@ -207,10 +208,6 @@
           <img src="images/yasasii-2.png">
         </a>
       </div>
-
-
-
-      
 
       
     </div>
