--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 	<meta name="description" content="シマブクロユウキ Portfolio Site">
 	<meta name="keywords" content="シマブクロユウキ,島袋裕樹,デザイン,ポートフォリオ">
 	<meta name="author" content="Shimabukuro Yuki">
+  
   <link rel="shortcut icon" href="images/favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/animate.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/lightbox.css">
@@ -209,7 +211,7 @@
         </a>
       </div>
 
-      
+
     </div>
   </div>
 </div>
