--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div class="wrapper">
   <div class="top-slide-container">
     <div class="top-slide-inner">
-      <img class="top-slide-logo" src="images/top.png">
+      <img class="top-slide-logo" src="images/idiot.png">
     </div>
   </div>
 
