--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div class="wrapper">
   <div class="top-slide-container">
     <div class="top-slide-inner">
-      <img class="top-slide-logo" src="images/idiot.png">
+      <img class="top-slide-logo" src="images/top.png">
     </div>
   </div>
 
@@ -46,6 +46,24 @@
   
   <div class="container">
     <div class="grid">
+    	<div class="grid-item">
+        <a href="images/dive.png" data-lightbox="group30" data-title="DIVE">
+          <img src="images/dive.png">
+        </a>
+      </div>
+
+    	<div class="grid-item">
+        <a href="images/wave.png" data-lightbox="group29" data-title="wave">
+          <img src="images/wave.png">
+        </a>
+      </div>
+
+    	<div class="grid-item">
+         <a href="images/rock.png" data-lightbox="group28" data-title="Rock'n'Roll">
+          <img src="images/rock.png">
+         </a>
+      </div>
+
       <div class="grid-item">
         <a href="images/kaisei.png" data-lightbox="group1" data-title="休日と快晴と君と">
           <img src="images/kaisei.png">
@@ -210,8 +228,6 @@
           <img src="images/yasasii-2.png">
         </a>
       </div>
-
-
     </div>
   </div>
 </div>
