--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
   <div class="container">
     <div class="grid">
     	<div class="grid-item">
+        <a href="images/shooting.png" data-lightbox="group30" data-title="シューティングスター">
+          <img src="images/shooting.png">
+        </a>
+      </div>
+
+    	<div class="grid-item">
         <a href="images/dive.png" data-lightbox="group30" data-title="DIVE">
           <img src="images/dive.png">
         </a>
