--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
   
   <div class="container">
     <div class="grid">
+      <div class="grid-item">
+        <a href="images/break.png" data-lightbox="group32" data-title="Break">
+          <img src="images/break.png">
+        </a>
+      </div>
+
     	<div class="grid-item">
         <a href="images/shooting.png" data-lightbox="group31" data-title="シューティングスター">
           <img src="images/shooting.png">
